Fixed layout issues.

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -3,6 +3,13 @@
     margin: 0;
 }
 
+html,
+body {
+    background-color: #0f0f0f;
+}
+body {
+    overflow-x: hidden;
+}
 .cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -475,4 +482,12 @@ div.ant-upload-list-item {
 ::after,
 ::before {
     background: transparent !important;
+}
+.sider-menu span.anticon {
+    font-size: 20px !important;
+    padding-right: 2px;
+}
+.sider-menu .ant-menu-item {
+    font-size: 16px;
+    font-weight: 600;
 }
